<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4FD8B8FF"
    android:paddingHorizontal="15dp"
    tools:context=".fragments.SearchFactFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/retrievedFactCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/addFactToDatabase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/retrievedFactText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/heavyweight"
            android:gravity="start"
            android:text=""
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/selectedCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-black"
        android:text="Random"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/returnToList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/searchFact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/destroy"
        android:text="SEARCH FACT"
        app:layout_constraintBottom_toTopOf="@+id/selectedCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addFactToDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#aaaaaa"
        android:clickable="false"
        android:fontFamily="@font/destroy"
        android:text="Add to List"
        app:layout_constraintBottom_toTopOf="@+id/searchFact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/returnToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_baseline_check_24"
        android:tintMode="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="102dp"
        android:layout_height="116dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retrievedFactCard">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="77dp"
            android:layout_height="70dp"
            android:src="@drawable/dancingchuck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/retrievedFactCard" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="Loading..." />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>




