...
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/heavyweight"
        android:paddingHorizontal="15dp"
        tools:text="Chuck norris is so strong...AAAAAAAAAAAAAAAAAAAA"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
...
        android:background="#4200D2"
        app:layout_constraintBottom_toBottomOf="@+id/delete_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/delete_button">

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:fontFamily="@font/destroy"
            android:text="Dev"
            android:textColor="@color/white"
...
